--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,12 +54,12 @@
         <item name="actionBarOverlayTopOffset">?actionBarSize</item>
         <item name="actionBarInsetStart">?actionBarSize</item>
         <item name="spinnerBarInsetStart">?actionBarSize</item>
-        <item name="selectableItemBackgroundBorderless">?android:selectableItemBackground</item>
+        <item name="selectableItemBackgroundBorderless">?android:selectableItemBackgroundBorderless</item>
         <item name="popupItemBackground">?android:selectableItemBackground</item>
         <item name="photoItemForeground">?android:selectableItemBackground</item>
 
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@color/background_material_dark</item>
+        <item name="android:windowBackground">@android:color/black</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_up</item>
 
 
@@ -74,12 +74,12 @@
         <item name="actionBarOverlayTopOffset">?actionBarSize</item>
         <item name="actionBarInsetStart">?actionBarSize</item>
         <item name="spinnerBarInsetStart">?actionBarSize</item>
-        <item name="selectableItemBackgroundBorderless">?android:selectableItemBackground</item>
+        <item name="selectableItemBackgroundBorderless">?android:selectableItemBackgroundBorderless</item>
         <item name="popupItemBackground">?android:selectableItemBackground</item>
         <item name="photoItemForeground">?android:selectableItemBackground</item>
 
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@color/background_material_dark</item>
+        <item name="android:windowBackground">@android:color/black</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_up</item>
 
 
