--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar_actionbar"
     android:background="?attr/colorPrimary"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize" />
