--- a/app/src/main/res/layout/list_story_item.xml
+++ b/app/src/main/res/layout/list_story_item.xml
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nononsenseapps.feeder.views.ListStoryItem xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/story"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground"
-    android:minHeight="?android:listPreferredItemHeight"
-    android:paddingStart="@dimen/keyline_1"
-    tools:ignore="RtlSymmetry" />
+    android:minHeight="?android:listPreferredItemHeight">
+<FrameLayout
+    android:id="@+id/check_bg"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="invisible"
+    android:background="?itemSwipingBGColor">
+    <ImageView
+        android:id="@+id/check_left"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="start|center_vertical"
+        android:layout_marginStart="8dp"
+        android:visibility="invisible"
+        android:src="@drawable/ic_action_visibility"
+        android:contentDescription="Indicator for mark as read" />
+
+    <ImageView
+        android:id="@+id/check_right"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="end|center_vertical"
+        android:layout_marginEnd="8dp"
+        android:visibility="invisible"
+        android:src="@drawable/ic_action_visibility"
+        android:contentDescription="Indicator for mark as read" />
+
+</FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/swiping_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.nononsenseapps.feeder.views.ListStoryItem
+            android:id="@+id/story"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:selectableItemBackground"
+            android:minHeight="?android:listPreferredItemHeight"
+            android:paddingStart="@dimen/keyline_1"
+            tools:ignore="RtlSymmetry" />
+    </FrameLayout>
+
+</FrameLayout>
