--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,6 +13,7 @@
     <declare-styleable name="ThemeIOSched">
         <attr name="isFloatingWindow" format="boolean" />
         <attr name="itemSwipingBGColor" format="color" />
+        <attr name="nightBGColor" format="color" />
     </declare-styleable>
     <declare-styleable name="FloatLabelLayout">
         <attr name="floatLabelTextAppearance" format="reference" />
