--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,6 +2,7 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.nononsenseapps.feeder.ui.FeedActivity">
@@ -20,6 +21,21 @@
             android:scrollbarStyle="outsideOverlay"
             android:scrollbars="vertical" />
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/checkall_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:scaleType="center"
+        android:layout_marginEnd="@dimen/keyline_1"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:borderWidth="0dp"
+        app:fabSize="normal"
+        app:elevation="5dp"
+        app:pressedTranslationZ="7dp"
+        android:src="@drawable/ic_action_done_all"/>
 
     <include
         layout="@layout/empty_feed"
