--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -6,9 +6,9 @@
 -->
 
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-              android:accountType="com.google"
+              android:accountType="com.nononsenseapps.feeder.account"
               android:contentAuthority="com.nononsenseapps.feeder.provider"
-              android:supportsUploading="true"
+              android:supportsUploading="false"
               android:userVisible="true"
               android:allowParallelSyncs="false"
               android:isAlwaysSyncable="true"
